--- a/css/creative.css
+++ b/css/creative.css
@@ -42,6 +42,10 @@ p {
   line-height: 1.5;
   margin-bottom: 20px;
 }
+
+.devPic {
+  max-width: 300px;
+}
 .bg-primary {
   background-color: #F05F40;
 }
